--- a/Index.html
+++ b/Index.html
@@ -6,15 +6,168 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootst
 rap.min.css" rel="stylesheet">
-
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
+rap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container">
- <h1>Thor Nikodemus Berger's CV</h1>
- <p>This part is inside a .container class.</p>
- <p>The .container class provides a responsive fixed width container.</p>
+
+<!-- navbar -->
+<nav class="navbar navbar-expand-md navbar-light"> 
+    <div class="container-xxl">
+            <a href="#intro" class="navbar-brand">
+                <span class="fw-bold text-secondary">
+                Thor's CV
+                </span>
+            </a>
+        <!--mobil navbar-->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false"
+            aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- navbar links -->
+        <div class="collapse navbar-collapse justify-content-end align-center"
+            id="main-nav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#grundskole">Grundskole</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#uddanelse">Uddanelse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#erfaring">Erhvervserfaring</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#sprog">Sprog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#kontakt">Kontakt</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>  
+</nav>
+
+<!-- main intro section -->
+<section id="Main">
+    <div class="container-lg">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-3 text-center text-md-start">
+                <h1>
+                    <div class="display-5">Thor Nikodemus Berger's</div>
+                    <div class="display-6">Curriculum Vitae</div>
+                </h1>
+            </div>
+                <div class="col-md-3 text-center d-none d-md-block">
+                    <img class="img-fluid" src="/assets/PF.jfif" alt="profilbilled">
+                </div>   
+        </div>
+    </div>
+
+</section>
+
+<!--txt section-->
+<section id ="grundskole">
+    <div class="container-lg">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center text-md-start">
+                <p class="lead my-4 text">Jeg er en 21-årig mand, jeg har interesse for computere og den kreativitet som de tillader os i fx 
+                    computerspil. Når jeg ikke spiller videospil så kan jeg godt lide at bruge min tid på at lære, jeg 
+                    nemlig også maget interesseret i fremtiden og hvad jeg kan gøre for at forbedre den. Jeg håber at 
+                    en karriere inden for IT vil gi mig muligheder for lære en masse og skabe noget vigtigt som kan 
+                    gøre en forskel
+                    </p>
+             </div>
+        </div>
+    </div>
+</section>
+
+<!--grundskole section-->
+<section id ="grundskole">
+    <div class="container-lg">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center text-md-start">
+                <p class="lead my-4 text">
+                    Grundskole
+                    ● Guldberg skole (folkeskole fra 0.klasse -9.klasse) 
+                    - 2016
+                    ● Skolen for gastronomi musik & design (efterskole 10.klasse) 
+                    - 2017
+                </p>
+             </div>
+        </div>
+    </div>
+</section>
+
+<!--uddanelse section-->
+<section id ="uddanelse">
+    <div class="container-lg">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center text-md-start">
+                <p class="lead my-4 text">
+                    Uddannelse
+                    ● Data og kommunikationsuddannelsen, med speciale i programmering 
+                    - Grundforløb 2020 - 
+                    - Skolepraktik 2021 - 
+                    - Hovedforløb 2022 -
+                    </p>
+             </div>
+        </div>
+    </div>
+</section>
+
+<!--erhvervserfaring section-->
+<section id ="erfaring">
+    <div class="container-lg">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center text-md-start">
+                <p class="lead my-4 text">
+                    Erhvervserfaring:
+                    • Dominos Pizza, København N, Pizzabud, 
+                    - 2018 
+                    • King & Queen Souvenir, København C, Servicemedarbejder, 
+                    - 2019
+                </p>
+             </div>
+        </div>
+    </div>
+</section>
+
+<!--sprog section-->
+<section id ="sprog">
+    <div class="container-lg">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center text-md-start">
+                <p class="lead my-4 text">
+                    Sprog:
+                    Dansk = modersmål
+                    Engelsk = flydende</p>
+             </div>
+        </div>
+    </div>
+</section>
+
+<!--kontakt section-->
+<section id ="kontakt">
+    <div class="container-lg">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center text-md-start">
+                <p class="lead my-4 text">Navn: Thor Nikodemus Berger 
+                    Født: 17/04/2000
+                    Adresse: Guldbergs plads 16 4th 
+                    Mobil: 40798709 
+                    Email: Thor.berger2@gmail.com
+                    </p>
+             </div>
+        </div>
+    </div>
+</section>
+
+
+ 
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
-rap.bundle.min.js"></script>
 </body>
 </html>
