made final inprovements to the HTML file and added a new Profle picture

--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@ rap.bundle.min.js"></script>
                 </h1>
             </div>
                 <div class="col-md-3 text-center d-none d-md-block">
-                    <img class="img-fluid" src="/assets/PF.jfif" alt="profilbilled">
+                    <img class="img-fluid" src="/assets/PF2.png" alt="profilbilled">
                 </div>   
         </div>
     </div>
@@ -73,7 +73,7 @@ rap.bundle.min.js"></script>
 <section id ="grundskole">
     <div class="container-lg">
         <div class="row justify-content-center">
-            <div class="col-md-8 text-center text-md-start">
+            <div class="col-md-10 text-center text-md-start">
                 <p class="lead my-4 text">Jeg er en 21-årig mand, jeg har interesse for computere og den kreativitet som de tillader os i fx 
                     computerspil. Når jeg ikke spiller videospil så kan jeg godt lide at bruge min tid på at lære, jeg 
                     nemlig også maget interesseret i fremtiden og hvad jeg kan gøre for at forbedre den. Jeg håber at 
@@ -90,11 +90,18 @@ rap.bundle.min.js"></script>
     <div class="container-lg">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center text-md-start">
-                <p class="lead my-4 text">
+                <p class="lead my-8 text fs-2 text">
                     Grundskole
+                </p>
+                <p class= "lead my-4 fs-4">
                     ● Guldberg skole (folkeskole fra 0.klasse -9.klasse) 
-                    - 2016
+                    <p class= "lead my-4 ">
+                        - 2016
+                    </p>
+                    <p class= "lead my-4 fs-4">   
                     ● Skolen for gastronomi musik & design (efterskole 10.klasse) 
+                    </p>
+                    <p class= "lead my-4 ">
                     - 2017
                 </p>
              </div>
@@ -107,13 +114,17 @@ rap.bundle.min.js"></script>
     <div class="container-lg">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center text-md-start">
-                <p class="lead my-4 text">
+                <p class="lead my-8 text fs-2 text">
                     Uddannelse
+                </p> 
+                <p class= "lead my-4 fs-4">   
                     ● Data og kommunikationsuddannelsen, med speciale i programmering 
+                    <p class= "lead my-4 ">
                     - Grundforløb 2020 - 
-                    - Skolepraktik 2021 - 
-                    - Hovedforløb 2022 -
-                    </p>
+                     Skolepraktik 2021 - 
+                     Hovedforløb 2022 -
+                </p>
+                </p>
              </div>
         </div>
     </div>
@@ -124,12 +135,21 @@ rap.bundle.min.js"></script>
     <div class="container-lg">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center text-md-start">
-                <p class="lead my-4 text">
+                <p class="lead my-8 text fs-2 text"> 
                     Erhvervserfaring:
+                </p>
+                    <p class= "lead my-4 fs-4">   
                     • Dominos Pizza, København N, Pizzabud, 
+                    </p>
+                    <p class= "lead my-4 ">
                     - 2018 
+                    </p>
+                    <p class= "lead my-4 fs-4"> 
                     • King & Queen Souvenir, København C, Servicemedarbejder, 
+                    </p>
+                    <p class= "lead my-4 ">
                     - 2019
+                    </p>
                 </p>
              </div>
         </div>
@@ -141,10 +161,15 @@ rap.bundle.min.js"></script>
     <div class="container-lg">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center text-md-start">
-                <p class="lead my-4 text">
+                <p class="lead my-8 text fs-2 text">
                     Sprog:
+                </p>
+                    <p class= "lead my-4 fs-4"> 
                     Dansk = modersmål
-                    Engelsk = flydende</p>
+                    </p>
+                    <p class= "lead my-4 fs-4"> 
+                    Engelsk = flydende
+                </p>
              </div>
         </div>
     </div>
@@ -154,7 +179,7 @@ rap.bundle.min.js"></script>
 <section id ="kontakt">
     <div class="container-lg">
         <div class="row justify-content-center">
-            <div class="col-md-8 text-center text-md-start">
+            <div class="col-md-12 text-center text-md-start">
                 <p class="lead my-4 text">Navn: Thor Nikodemus Berger 
                     Født: 17/04/2000
                     Adresse: Guldbergs plads 16 4th 
